<resources>
    <string name="app_name">Training 100</string>
    <string name="edit_textbox">Enter some text</string>
    <string name="button_submit">Submit</string>
    <string name="button_recyclerview">Recycler View</string>
    <string name="button_broadcast">broadcast</string>
    <string name="toast_custom_broadcast">Custom Broadcast</string>
    <string name="text_async_task">I am ready to start work</string>
    <string name="button_async_task_start">Start Task</string>
    <string name="napping">Napping...</string>
    <string name="text_instructions">Enter a book name to find out who wrote the book</string>
    <string name="edit_bookInput_hint">Book Title</string>
    <string name="button_search">Search Books</string>
    <string name="no_results">No Results Found</string>
    <string name="loading">Loading...</string>
    <string name="no_network">Please Check your network connection and try again.</string>
    <string name="no_search_term">Please enter a search term</string>
    <string name="button_notify">Notify Me!</string>
    <string name="button_update">Update Me!</string>
    <string name="button_cancel">Cancel Me!</string>
    <string name="button_inbox">Inbox Me!</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="button_count">count</string>
    <string name="button_reset">RESET</string>
    <string name="button_black">black</string>
    <string name="button_red">RED</string>
    <string name="button_blue">BLUE</string>
    <string name="button_green">Green</string>
    <string name="default_count">0</string>
    <string name="action_settings">settings</string>
    <string name="title_activity_droid_cafe">DroidCafe</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="button_droidcafe">Droid Cafe</string>
    <string name="text_intro">Droid Desserts</string>
    <string name="image_donut_desc">Donuts are glazed and sprinkled with candy.</string>
    <string name="image_icecream_desc">Ice cream sandwiches have chocolate wafers and vanilla filling.</string>
    <string name="image_froyo_desc">FroYo is premium self-serve frozen yogurt.</string>
    <string name="donut_order_msg">You ordered a donut.</string>
    <string name="icecream_order_msg">You ordered an icecream.</string>
    <string name="froyo_order_msg">You ordered a froyo.</string>
    <string name="unknown_order_msg">Unknown item.</string>
    <string name="label_name">Name</string>
    <string name="edit_name_hint">Enter Your Name</string>
    <string name="label_addr">Address</string>
    <string name="edit_addr_hint">Enter Your Address</string>
    <string name="label_phone">Phone</string>
    <string name="edit_phone_hint">Enter Phone</string>
    <string name="label_note">Note</string>
    <string name="edit_note_hint">Enter Note</string>
    <string name="label_delivery">Choose a delivery method:</string>
    <string name="radio_sameday">Same day messenger service</string>
    <string name="radio_nextday">Next day ground delivery</string>
    <string name="radio_pickup">Pick up</string>
    <string name="action_contact">Contact</string>
    <string name="action_order">Order</string>
    <string name="action_status">Status</string>
    <string name="action_fav">Favorites</string>
    <string name="action_order_msg">You selected Order.</string>
    <string name="action_status_msg">You selected Status.</string>
    <string name="action_fav_msg">You selected Favorites.</string>
    <string name="action_contact_mg">You selected Contact.</string>
    <string name="button_encrypt">Encrypt</string>
    <string name="button_decrypt">decrypt</string>
    <string name="per_use_key">Per Use Key</string>
    <string name="timeout_key">Timeout Key</string>
    <string name="text_secret_data">Placeholder for output</string>
</resources>
