<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/action_contact"
        android:orderInCategory="100"
        android:title="@string/action_contact"
        app:showAsAction="never"/>
    <item android:id="@+id/action_order"
        android:orderInCategory="10"
        android:title="@string/action_order"
        android:icon="@drawable/ic_shoppint_cart"
        app:showAsAction="always" />
    <item android:id="@+id/action_status"
        android:orderInCategory="20"
        android:title="@string/action_status"
        android:icon="@drawable/ic_status"
        app:showAsAction="always"/>
    <item android:id="@+id/action_fav"
        android:orderInCategory="30"
        android:title="@string/action_fav"
        android:icon="@drawable/ic_favorites"
        app:showAsAction="ifRoom"/>
    <item android:id="@+id/action_settings"
        android:orderInCategory="1000"
        android:title="@string/action_settings"
        app:showAsAction="never" />
</menu>
