<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".droidcafe.OrderActivity">

    <TextView
        android:id="@+id/text_order_detail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/label_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="24dp"
        android:text="@string/label_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_order_detail" />

    <EditText
        android:id="@+id/edit_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:ems="10"
        android:hint="@string/edit_name_hint"
        android:inputType="textPersonName"
        app:layout_constraintBaseline_toBaselineOf="@id/label_name"
        app:layout_constraintStart_toEndOf="@id/label_name" />

    <TextView
        android:id="@+id/label_addr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="24dp"
        android:text="@string/label_addr"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/label_name" />

    <EditText
        android:id="@+id/edit_addr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:ems="10"
        android:hint="@string/edit_addr_hint"
        android:inputType="textMultiLine"
        app:layout_constraintBaseline_toBaselineOf="@id/label_addr"
        app:layout_constraintStart_toEndOf="@id/label_addr" />

    <TextView
        android:id="@+id/label_phone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="24dp"
        android:text="@string/label_phone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edit_addr" />

    <EditText
        android:id="@+id/edit_phone"
        android:layout_width="172dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:ems="10"
        android:imeOptions="actionSend"
        android:hint="@string/edit_phone_hint"
        android:inputType="phone"
        app:layout_constraintBaseline_toBaselineOf="@id/label_phone"
        app:layout_constraintStart_toEndOf="@id/label_phone" />

    <Spinner
        android:id="@+id/spinner_phone"
        android:layout_width="172dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/edit_phone"
        app:layout_constraintTop_toBottomOf="@id/edit_addr" />

    <TextView
        android:id="@+id/label_note"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="24dp"
        android:text="@string/label_note"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/label_phone" />

    <EditText
        android:id="@+id/edit_note"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:ems="10"
        android:hint="@string/edit_note_hint"
        android:inputType="textMultiLine|textCapSentences"
        app:layout_constraintBaseline_toBaselineOf="@id/label_note"
        app:layout_constraintStart_toEndOf="@id/label_note" />

    <TextView
        android:id="@+id/label_delivery"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="24dp"
        android:text="@string/label_delivery"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edit_note" />

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/label_delivery">

        <RadioButton
            android:id="@+id/radio_sameday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="selectDeliveryMethod"
            android:text="@string/radio_sameday" />

        <RadioButton
            android:id="@+id/radio_nextday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:onClick="selectDeliveryMethod"
            android:text="@string/radio_nextday" />

        <RadioButton
            android:id="@+id/radio_pickup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="selectDeliveryMethod"
            android:text="@string/radio_pickup" />
    </RadioGroup>


</androidx.constraintlayout.widget.ConstraintLayout>
