<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".security.SecurityFragment">

    <ToggleButton
        android:id="@+id/toggle_key_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:checked="true"
        android:textOn="@string/timeout_key"
        android:textOff="@string/per_use_key"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edit_secret_data"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:hint="Enter your data"
        android:inputType="textMultiLine"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toggle_key_type" />

    <Button
        android:id="@+id/button_encrypt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_encrypt"
        android:layout_margin="16dp"
        app:layout_constraintTop_toBottomOf="@id/edit_secret_data"
        app:layout_constraintRight_toLeftOf="@id/button_decrypt"
        app:layout_constraintLeft_toLeftOf="parent" />

    <Button
        android:id="@+id/button_decrypt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_decrypt"
        android:layout_margin="16dp"
        app:layout_constraintTop_toBottomOf="@id/edit_secret_data"
        app:layout_constraintLeft_toRightOf="@id/button_encrypt"
        app:layout_constraintRight_toRightOf="parent" />

    <TextView
        android:id="@+id/text_secret_data"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_secret_data"
        android:layout_margin="16dp"
        app:layout_constraintTop_toBottomOf="@id/button_encrypt"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />



</androidx.constraintlayout.widget.ConstraintLayout>
