<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".sharedpref.HelloSharedPref">

    <TextView
        android:id="@+id/text_count"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="8dp"
        android:background="@android:color/darker_gray"
        android:gravity="center"
        android:text="@string/default_count"
        android:textColor="@android:color/white"
        android:textAlignment="center"
        android:textSize="100sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/guideline_upper"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_upper"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_end="120dp"/>

    <Button
        android:id="@+id/button_black"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/black"
        android:text="@string/button_black"
        app:layout_constraintEnd_toStartOf="@id/button_red"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/guideline_upper"
        app:layout_constraintBottom_toTopOf="@id/guideline_lower"
        app:layout_constraintHorizontal_chainStyle="packed"/>

    <Button
        android:id="@+id/button_red"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/holo_red_light"
        android:text="@string/button_red"
        app:layout_constraintStart_toEndOf="@+id/button_black"
        app:layout_constraintEnd_toStartOf="@id/button_blue"
        app:layout_constraintTop_toTopOf="@id/guideline_upper"
        app:layout_constraintBottom_toTopOf="@id/guideline_lower" />

    <Button
        android:id="@+id/button_blue"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/holo_blue_bright"
        android:text="@string/button_blue"
        app:layout_constraintStart_toEndOf="@+id/button_red"
        app:layout_constraintEnd_toStartOf="@id/button_green"
        app:layout_constraintTop_toTopOf="@id/guideline_upper"
        app:layout_constraintBottom_toTopOf="@id/guideline_lower"/>

    <Button
        android:id="@+id/button_green"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/holo_green_light"
        android:text="@string/button_green"
        app:layout_constraintTop_toTopOf="@id/guideline_upper"
        app:layout_constraintBottom_toTopOf="@id/guideline_lower"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button_blue"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_lower"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_end="56dp" />

    <Button
        android:id="@+id/button_count"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:layout_marginBottom="8dp"
        android:background="@color/colorPrimary"
        android:text="@string/button_count"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/button_reset"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/guideline_lower"
        app:layout_constraintHorizontal_chainStyle="packed"/>

    <Button
        android:id="@+id/button_reset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:layout_marginBottom="8dp"
        android:background="@color/colorPrimary"
        android:text="@string/button_reset"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button_count"
        app:layout_constraintTop_toBottomOf="@id/guideline_lower"/>

</androidx.constraintlayout.widget.ConstraintLayout>
